# BirdoidSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  birdoidsim  boid.c  boid.cpp  boid.h  main.c  main.cpp
